# dcore

./: .gitignore  Cargo.toml  bhack-release.sh  readme.md  run.sh  wlog.fp.md
changelog/: 0.1.0.md  0.1.1.md
changelog/tasks/: normand.md  test-set-key-value.md
changelog/tasks/0.1.1/feature/2211/: ipld-git-to-ipfs.md
changelog/tasks/feature/2211/: ipld-git-to-ipfs.md  sync-with-ipfs-embed.md
cli/: Cargo.toml
cli/demo/: create-identity.sh  document.sh  run-demo  run-demo.sh
cli/demo/gpghome/: pubring.kbx~
cli/src/: main.rs
core/: Cargo.toml
core/src/: document.rs  document_utils.rs  errors.rs  event.rs  gpg.rs  identity.rs  lib.rs  libp2p_sync.rs  resource.rs  sync_git.rs  sync_ipfs.rs  sync_libp2p.rs  test_utils.rs  utils.rs
core/test/key1/: readme.md
core/test/key1/.key/: pubring.kbx  pubring.kbx~  trustdb.gpg
core/test/key1/.key/openpgp-revocs.d/: A84E5D451E9E75B4791556896F45F34A926FBB70.rev
core/test/key1/.key/private-keys-v1.d/: 6E629E34ADCB1D061DB141817C23E8ADD300BAF6.key
core/test/sign-commit/: .gitignore  alice@cl.com.gpg  private.key  public.key
core/test/sign-commit/rsa4096/: pub.asc
core/test/sign-commit/rsa4096/gpghome/: trustdb.gpg
core/test/sign-commit/rsa4096/gpghome/private-keys-v1.d/: 1B64A1F553E54DD21D818FB6E52E514ED0D0CCD2.key  80EF7BCEB60D1EC73386F3DA651BCCEAEB39D87F.key  BD0C702BEE564B318CF4B41A5C9889017ADEA304.key  E8AFFA737D7C4DB861FA195F89E172841F46835C.key
demo/: document.sh
examples/: keys.rs
src/: doc.rs  document.rs  document_utils.rs  errors.rs  event.rs  gpg.rs  identity.rs  lib.rs  main.rs  resource.rs  test_utils.rs
test/sign-commit/: create-gpg.sh
test/sign-commit/rsa4096/: private.key
test/sign-commit/rsa4096/gpghome/: pubring.kbx  pubring.kbx~  trustdb.gpg
test/sign-commit/rsa4096/gpghome/openpgp-revocs.d/: 6B02F638CE3410F55B38C2F41EEDF9019FDD0601.rev  A52DA3DE6161DE926F61D214F1FA6233ECB0D4A5.rev
test/sign-commit/rsa4096/gpghome/private-keys-v1.d/: 387AE5F562D5516D06521F65AB918735B93C1DF5.key  (+1 more)
wiki/gpg/: gpg-at-nasas.md
