[package]
name = "dcore"
version = "0.1.0-baselhack9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
yrs = "0.12.0"
libp2p = "0.48.0"
futures-timer = "3.0.2"
gpgme = "0.10.0"
gpgme-sys = "0.10.0"
thiserror = "1.0.37"
der = "0.6.0"
fs_extra = "1.2.0"
[dependencies.sequoia-openpgp]
version = "*"
default-features = false
features = ["crypto-nettle"]


[dependencies.lib0]
version = "0.12.0"

[dependencies.rand]
version = "0.7.0"
features = ["wasm-bindgen"]

[dependencies.chrono]
version = "^0.4"
features = [
    "clock",
    "std",
]
default-features = false

[dependencies.futures]
version = "0.3.1"

[dev-dependencies.async-std]
version = "1.6.2"
features = ["attributes"]

